# ozon-parser

./: .gitignore  CLAUDE.md  README.md  cookie_loader.py  debug_block_page.html  logs.py  main.py  pyproject.toml  recaptcha_pool.py  recaptcha_solver.py  recaptcha_solver_playwright.py  recaptcha_solver_selenium.py
app/: logging_config.py  main.py  main_playwright.py  main_selenium.py  settings.py
app/schemas/: __init__.py  product.py
app/services/: __init__.py  captcha.py  parser.py  parser_playwright.py  parser_selenium.py  position_tracker.py  sheets.py  telegram.py
deploy/: install.sh  ozon-parser.service  ozon-parser.timer  uninstall.sh
scripts/: benchmark.py  check_fingerprint.py  check_ip.py  check_proxy_type.py  debug_network.py  test_api_direct.py  test_pagination.py  test_scroll.py
