[project]
name = "ozon-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.12.0",
    "playwright>=1.49.0",
    "gspread>=6.2.1",
    "google-auth>=2.47.0",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
]
